@@ -73,7 +73,7 @@ public class ReadAndWriteBidixTest {
     if (DixtoolsTestSuite.onlyCLI) return;
     String outfile = rm("tmp_testDicFormat-eo-en.xml");
 
-    DicFormat df = new DicFormat(dic);
+    DicFix df = new DicFix(dic);
     df.setOut(outfile);
     DictionaryElement dicFormatted = df.format();
     //dicFormatted.printXML(outfile,df.getOpt());
